--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,7 +33,6 @@ apache-avro = "0.16"
 arrow-arith = { version = ">=46" }
 arrow-array = { version = ">=46" }
 arrow-schema = { version = ">=46" }
-async-trait = "0.1"
 bimap = "0.6"
 bitvec = "1.0.1"
 chrono = "0.4"
@@ -63,6 +62,7 @@ serde_repr = "0.1.16"
 serde_with = "3.4.0"
 tempfile = "3.8"
 tokio = { version = "1", features = ["macros"] }
+trait-variant = "0.1"
 typed-builder = "^0.18"
 url = "2"
 urlencoding = "2"
